tesa/a
tesa.c: In function ‘main’:
tesa.c:46:9: error: variable ‘act’ has initializer but incomplete type
  struct sigaction act = {
         ^
tesa.c:47:3: error: unknown field ‘sa_handler’ specified in initializer
   .sa_handler = handler,
   ^
tesa.c:47:17: error: excess elements in struct initializer [-Werror]
   .sa_handler = handler,
                 ^
tesa.c:47:17: note: (near initialization for ‘act’)
tesa.c:48:3: error: unknown field ‘sa_flags’ specified in initializer
   .sa_flags = SA_RESTART
   ^
tesa.c:48:15: error: ‘SA_RESTART’ undeclared (first use in this function)
   .sa_flags = SA_RESTART
               ^
tesa.c:48:15: note: each undeclared identifier is reported only once for each function it appears in
tesa.c:48:15: error: excess elements in struct initializer [-Werror]
tesa.c:48:15: note: (near initialization for ‘act’)
tesa.c:46:19: error: storage size of ‘act’ isn’t known
  struct sigaction act = {
                   ^
tesa.c:50:2: error: implicit declaration of function ‘sigemptyset’ [-Werror=implicit-function-declaration]
  sigemptyset(&act.sa_mask);
  ^
tesa.c:51:11: error: implicit declaration of function ‘sigaction’ [-Werror=implicit-function-declaration]
  if(-1 == sigaction(SIGINT, &act, NULL))
           ^
tesa.c:53:9: error: variable ‘act2’ has initializer but incomplete type
  struct sigaction act2 = {
         ^
tesa.c:54:3: error: unknown field ‘sa_handler’ specified in initializer
   .sa_handler = handlerCHLD,
   ^
tesa.c:54:17: error: excess elements in struct initializer [-Werror]
   .sa_handler = handlerCHLD,
                 ^
tesa.c:54:17: note: (near initialization for ‘act2’)
tesa.c:55:3: error: unknown field ‘sa_flags’ specified in initializer
   .sa_flags = SA_RESTART
   ^
tesa.c:55:15: error: excess elements in struct initializer [-Werror]
   .sa_flags = SA_RESTART
               ^
tesa.c:55:15: note: (near initialization for ‘act2’)
tesa.c:53:19: error: storage size of ‘act2’ isn’t known
  struct sigaction act2 = {
                   ^
tesa.c:60:9: error: variable ‘act3’ has initializer but incomplete type
  struct sigaction act3 = {
         ^
tesa.c:61:3: error: unknown field ‘sa_handler’ specified in initializer
   .sa_handler = handlerAL,
   ^
tesa.c:61:17: error: excess elements in struct initializer [-Werror]
   .sa_handler = handlerAL,
                 ^
tesa.c:61:17: note: (near initialization for ‘act3’)
tesa.c:62:3: error: unknown field ‘sa_flags’ specified in initializer
   .sa_flags = SA_RESTART
   ^
tesa.c:62:15: error: excess elements in struct initializer [-Werror]
   .sa_flags = SA_RESTART
               ^
tesa.c:62:15: note: (near initialization for ‘act3’)
tesa.c:60:19: error: storage size of ‘act3’ isn’t known
  struct sigaction act3 = {
                   ^
tesa.c:60:19: error: unused variable ‘act3’ [-Werror=unused-variable]
tesa.c:53:19: error: unused variable ‘act2’ [-Werror=unused-variable]
  struct sigaction act2 = {
                   ^
tesa.c:46:19: error: unused variable ‘act’ [-Werror=unused-variable]
  struct sigaction act = {
                   ^
tesa.c: In function ‘readTestsuit’:
tesa.c:96:12: error: implicit declaration of function ‘lstat’ [-Werror=implicit-function-declaration]
   if(-1 == lstat(d->d_name, &s))
            ^
tesa.c: In function ‘runTestsuite’:
tesa.c:114:2: error: unknown type name ‘sigset_t’
  sigset_t set;
  ^
tesa.c:116:2: error: implicit declaration of function ‘sigaddset’ [-Werror=implicit-function-declaration]
  sigaddset(&set, SIGINT);
  ^
tesa.c:118:3: error: implicit declaration of function ‘sigprocmask’ [-Werror=implicit-function-declaration]
   sigprocmask(SIG_BLOCK, &set, NULL);
   ^
tesa.c:118:15: error: ‘SIG_BLOCK’ undeclared (first use in this function)
   sigprocmask(SIG_BLOCK, &set, NULL);
               ^
tesa.c:124:16: error: ‘SIG_UNBLOCK’ undeclared (first use in this function)
    sigprocmask(SIG_UNBLOCK, &set, NULL);
                ^
tesa.c:133:2: error: unknown type name ‘sigset_t’
  sigset_t set2 ,empty;
  ^
tesa.c:138:3: error: implicit declaration of function ‘sigsuspend’ [-Werror=implicit-function-declaration]
   sigsuspend(&empty);
   ^
tesa.c: In function ‘handlerAL’:
tesa.c:166:3: error: implicit declaration of function ‘kill’ [-Werror=implicit-function-declaration]
   kill(test.testcases[i].pid, SIGKILL);
   ^
tesa.c: At top level:
tesa.c:35:13: error: ‘printSummary’ used but never defined [-Werror]
 static void printSummary(const struct testsuite ts[]);
             ^
tesa.c:37:13: error: ‘readTestsuite’ used but never defined [-Werror]
 static void readTestsuite(void);
             ^
tesa.c:86:13: error: ‘readTestsuit’ defined but not used [-Werror=unused-function]
 static void readTestsuit(void){
             ^
cc1: all warnings being treated as errors
